--- a/Acceloka.API/appsettings.json
+++ b/Acceloka.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=acceloka;Username=postgres;Password=buudyy12"
+  }
 }
