Remove database credentials from appsettings.json

--- a/Acceloka.API/appsettings.json
+++ b/Acceloka.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=acceloka;Username=postgres;Password=buudyy12"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=acceloka;Username=your_username;Password=your_password"
   }
 }
